@@ -26,7 +26,8 @@ class EnotifNotifyJob extends Job {
 			$this->params['timestamp'],
 			$this->params['summary'],
 			$this->params['minorEdit'],
-			$this->params['oldid']
+			$this->params['oldid'],
+			$this->params['watchers']
 		);
 		return true;
 	}
